# rust-book-management

./: Cargo.toml  Dockerfile  Makefile.toml  README.md  compose.yaml
.github/workflows/: ci.yaml
adapter/: Cargo.toml
adapter/migrations/: 20250511140615_start.up.sql
adapter/src/database/: mod.rs
adapter/src/database/model/: book.rs
adapter/src/repository/: book.rs  health.rs
api/: Cargo.toml
api/src/handler/: book.rs  health.rs
api/src/model/: book.rs
api/src/route/: book.rs  health.rs
kernel/: Cargo.toml
kernel/src/model/: id.rs
kernel/src/repository/: book.rs
registry/src/: lib.rs
shared/src/: config.rs  env.rs  error.rs
src/: main.rs
